// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StatusPill — status × mode snapshot matrix renders status=attention mode=dark 1`] = `
<View
  accessibilityLabel="Needs attention"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#FF735024",
        "borderColor": "#FF735059",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#FF7350",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#FF7350",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#FF7350",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Needs attention
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=attention mode=light 1`] = `
<View
  accessibilityLabel="Needs attention"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#FF735024",
        "borderColor": "#FF735059",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#FF7350",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#FF7350",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#FF7350",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Needs attention
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=clear mode=dark 1`] = `
<View
  accessibilityLabel="In their usual range"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#61B56524",
        "borderColor": "#61B56559",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#61B565",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#61B565",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#61B565",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    In their usual range
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=clear mode=light 1`] = `
<View
  accessibilityLabel="In their usual range"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#61B56524",
        "borderColor": "#61B56559",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#61B565",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#61B565",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#61B565",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    In their usual range
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=offline mode=dark 1`] = `
<View
  accessibilityLabel="No recent reading"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#857F7A24",
        "borderColor": "#857F7A59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#857F7A",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#857F7A",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#857F7A",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    No recent reading
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=offline mode=light 1`] = `
<View
  accessibilityLabel="No recent reading"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#857F7A24",
        "borderColor": "#857F7A59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#857F7A",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#857F7A",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#857F7A",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    No recent reading
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=sleeping mode=dark 1`] = `
<View
  accessibilityLabel="Sleeping"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#7B67CC24",
        "borderColor": "#7B67CC59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#7B67CC",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        null,
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#7B67CC",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Sleeping
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=sleeping mode=light 1`] = `
<View
  accessibilityLabel="Sleeping"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#7B67CC24",
        "borderColor": "#7B67CC59",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#7B67CC",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        null,
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#7B67CC",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Sleeping
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=urgent mode=dark 1`] = `
<View
  accessibilityLabel="Urgent"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#DC563124",
        "borderColor": "#DC563159",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#DC5631",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#DC5631",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#DC5631",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Urgent
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=urgent mode=light 1`] = `
<View
  accessibilityLabel="Urgent"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#DC563124",
        "borderColor": "#DC563159",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#DC5631",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#DC5631",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#DC5631",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Urgent
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=watch mode=dark 1`] = `
<View
  accessibilityLabel="Watch"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#F2A61824",
        "borderColor": "#F2A61859",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#F2A618",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#F2A618",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#F2A618",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Watch
  </Text>
</View>
`;

exports[`StatusPill — status × mode snapshot matrix renders status=watch mode=light 1`] = `
<View
  accessibilityLabel="Watch"
  accessibilityRole="text"
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "#F2A61824",
        "borderColor": "#F2A61859",
        "borderRadius": 99,
        "borderWidth": 0.5,
        "flexDirection": "row",
        "gap": 5,
        "paddingLeft": 7,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      undefined,
    ]
  }
  testID="pill"
>
  <View
    style={
      [
        {
          "backgroundColor": "#F2A618",
          "borderRadius": 99,
          "height": 5,
          "width": 5,
        },
        {
          "elevation": 0,
          "shadowColor": "#F2A618",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.6,
          "shadowRadius": 4,
        },
      ]
    }
  />
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      {
        "color": "#F2A618",
        "fontFamily": "Inter_500Medium",
        "fontSize": 11,
        "letterSpacing": 0.2,
        "lineHeight": 14,
      }
    }
  >
    Watch
  </Text>
</View>
`;
